scaling input to dashboard

--- a/notebook/preprocess_data.ipynb
+++ b/notebook/preprocess_data.ipynb
@@ -1690,351 +1690,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": null,
    "id": "twenty-punch",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Assortment</th>\n",
-       "      <th>CompetitionDistance</th>\n",
-       "      <th>CompetitionOpenSinceMonth</th>\n",
-       "      <th>CompetitionOpenSinceYear</th>\n",
-       "      <th>DayOfWeek</th>\n",
-       "      <th>DayOfYear</th>\n",
-       "      <th>Open</th>\n",
-       "      <th>Promo</th>\n",
-       "      <th>Promo2</th>\n",
-       "      <th>Promo2SinceWeek</th>\n",
-       "      <th>PromoInterval</th>\n",
-       "      <th>SchoolHoliday</th>\n",
-       "      <th>StateHoliday</th>\n",
-       "      <th>Store</th>\n",
-       "      <th>StoreType</th>\n",
-       "      <th>Years</th>\n",
-       "      <th>dayType</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.030607</td>\n",
-       "      <td>0.004213</td>\n",
-       "      <td>0.939130</td>\n",
-       "      <td>0.500000</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.345495</td>\n",
-       "      <td>0.005793</td>\n",
-       "      <td>0.921739</td>\n",
-       "      <td>0.500000</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.285714</td>\n",
-       "      <td>0.333333</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.001795</td>\n",
-       "      <td>0.333333</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>0.5</td>\n",
-       "      <td>0.587169</td>\n",
-       "      <td>0.001580</td>\n",
-       "      <td>0.982609</td>\n",
-       "      <td>0.500000</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.005386</td>\n",
-       "      <td>0.333333</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.183643</td>\n",
-       "      <td>0.004739</td>\n",
-       "      <td>0.991304</td>\n",
-       "      <td>0.500000</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.006284</td>\n",
-       "      <td>0.333333</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>0.5</td>\n",
-       "      <td>0.049216</td>\n",
-       "      <td>0.003686</td>\n",
-       "      <td>0.869565</td>\n",
-       "      <td>0.500000</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.007181</td>\n",
-       "      <td>0.333333</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>41083</th>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.046033</td>\n",
-       "      <td>0.002633</td>\n",
-       "      <td>0.991304</td>\n",
-       "      <td>0.833333</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.632653</td>\n",
-       "      <td>0.333333</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.996409</td>\n",
-       "      <td>0.333333</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>41084</th>\n",
-       "      <td>0.5</td>\n",
-       "      <td>0.045544</td>\n",
-       "      <td>0.001580</td>\n",
-       "      <td>0.921739</td>\n",
-       "      <td>0.833333</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.997307</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>41085</th>\n",
-       "      <td>0.5</td>\n",
-       "      <td>0.226249</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.833333</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.998205</td>\n",
-       "      <td>0.333333</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>41086</th>\n",
-       "      <td>0.5</td>\n",
-       "      <td>0.020813</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.833333</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.999102</td>\n",
-       "      <td>0.333333</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>41087</th>\n",
-       "      <td>0.5</td>\n",
-       "      <td>0.130509</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.833333</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.448980</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>0.666667</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>41088 rows × 17 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "       Assortment  CompetitionDistance  CompetitionOpenSinceMonth  \\\n",
-       "0             0.0             0.030607                   0.004213   \n",
-       "1             0.0             0.345495                   0.005793   \n",
-       "2             0.5             0.587169                   0.001580   \n",
-       "3             0.0             0.183643                   0.004739   \n",
-       "4             0.5             0.049216                   0.003686   \n",
-       "...           ...                  ...                        ...   \n",
-       "41083         0.0             0.046033                   0.002633   \n",
-       "41084         0.5             0.045544                   0.001580   \n",
-       "41085         0.5             0.226249                   1.000000   \n",
-       "41086         0.5             0.020813                   1.000000   \n",
-       "41087         0.5             0.130509                   1.000000   \n",
-       "\n",
-       "       CompetitionOpenSinceYear  DayOfWeek  DayOfYear  Open  Promo  Promo2  \\\n",
-       "0                      0.939130   0.500000        1.0   1.0    1.0     0.0   \n",
-       "1                      0.921739   0.500000        1.0   1.0    1.0     1.0   \n",
-       "2                      0.982609   0.500000        1.0   1.0    1.0     0.0   \n",
-       "3                      0.991304   0.500000        1.0   1.0    1.0     0.0   \n",
-       "4                      0.869565   0.500000        1.0   1.0    1.0     0.0   \n",
-       "...                         ...        ...        ...   ...    ...     ...   \n",
-       "41083                  0.991304   0.833333        0.0   1.0    0.0     1.0   \n",
-       "41084                  0.921739   0.833333        0.0   1.0    0.0     0.0   \n",
-       "41085                  0.000000   0.833333        0.0   1.0    0.0     0.0   \n",
-       "41086                  0.000000   0.833333        0.0   1.0    0.0     0.0   \n",
-       "41087                  0.000000   0.833333        0.0   1.0    0.0     1.0   \n",
-       "\n",
-       "       Promo2SinceWeek  PromoInterval  SchoolHoliday  StateHoliday     Store  \\\n",
-       "0             0.000000       0.000000            0.0           0.0  0.000000   \n",
-       "1             0.285714       0.333333            0.0           0.0  0.001795   \n",
-       "2             0.000000       0.000000            0.0           0.0  0.005386   \n",
-       "3             0.000000       0.000000            0.0           0.0  0.006284   \n",
-       "4             0.000000       0.000000            0.0           0.0  0.007181   \n",
-       "...                ...            ...            ...           ...       ...   \n",
-       "41083         0.632653       0.333333            0.0           1.0  0.996409   \n",
-       "41084         0.000000       0.000000            0.0           1.0  0.997307   \n",
-       "41085         0.000000       0.000000            0.0           1.0  0.998205   \n",
-       "41086         0.000000       0.000000            0.0           1.0  0.999102   \n",
-       "41087         0.448980       1.000000            1.0           1.0  1.000000   \n",
-       "\n",
-       "       StoreType  Years  dayType  \n",
-       "0       0.000000    0.0      0.0  \n",
-       "1       0.333333    0.0      0.0  \n",
-       "2       0.333333    0.0      0.0  \n",
-       "3       0.333333    0.0      0.0  \n",
-       "4       0.333333    0.0      0.0  \n",
-       "...          ...    ...      ...  \n",
-       "41083   0.333333    0.0      1.0  \n",
-       "41084   0.000000    0.0      1.0  \n",
-       "41085   0.333333    0.0      1.0  \n",
-       "41086   0.333333    0.0      1.0  \n",
-       "41087   0.666667    0.0      1.0  \n",
-       "\n",
-       "[41088 rows x 17 columns]"
-      ]
-     },
-     "execution_count": 48,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "#Save clean and fixed train and test dataframes\n",
-    "test"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 49,
-   "id": "described-hunger",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# train.to_csv('../data/train_model.csv')\n",
-    "# test.to_csv('../data/test_model.csv')"
+    "#Save clean and fixed train and test dataframes"
    ]
   }
  ],
