--- a/notebook/modelling.ipynb
+++ b/notebook/modelling.ipynb
@@ -198,12 +198,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "id": "false-vessel",
    "metadata": {},
    "outputs": [],
    "source": [
     "params, metrics, tags, artifacts = fetch_logged_data(run.info.run_id)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "homeless-spectacular",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'training_mae': 0.07322224162420078,\n",
+       " 'training_mse': 0.011245477329646683,\n",
+       " 'training_r2_score': 0.8292504689253077,\n",
+       " 'training_rmse': 0.1060446949622973,\n",
+       " 'training_score': 0.8292504689253077,\n",
+       " 'validation_mse': 0.012565565767504344,\n",
+       " 'validation_r2': 0.8068687056339894,\n",
+       " 'validation_rmse': 0.1120962344037673}"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "metrics"
    ]
   },
   {
@@ -215,7 +243,7 @@
     {
      "data": {
       "text/plain": [
-       "['../models/10-08-2022-09-33-08.pkl']"
+       "['../models/10-08-2022-13-53-45.pkl']"
       ]
      },
      "execution_count": 13,
@@ -246,7 +274,7 @@
    "execution_count": 14,
    "id": "superb-small",
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
@@ -973,11 +1001,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
+   "id": "royal-telling",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# train.to_csv('../data/train_model.csv')\n",
+    "# test.to_csv('../data/test_model.csv')\n",
+    "logged_model = 'runs:/4ae62e352b724d6688d161de367a9961/model'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "other-dispatch",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "loaded_model = mlflow.pyfunc.load_model(logged_model)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
    "id": "lonely-import",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "y_pred=loaded_model.predict(pd.DataFrame(X_val))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "latest-mouse",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(0.012565565767504344, 0.1120962344037673, 0.8068687056339894)"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model_prep.error_calculate(y_val,y_pred)"
+   ]
   }
  ],
  "metadata": {
