serving predicitions completed

--- a/notebook/preprocess_data.ipynb
+++ b/notebook/preprocess_data.ipynb
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "id": "freelance-carnival",
    "metadata": {},
    "outputs": [],
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "id": "widespread-tribune",
    "metadata": {},
    "outputs": [],
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "id": "thirty-opera",
    "metadata": {},
    "outputs": [],
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "id": "independent-press",
    "metadata": {},
    "outputs": [
@@ -313,7 +313,7 @@
        "4              NaN              NaN              NaN  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -326,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "id": "brief-tract",
    "metadata": {},
    "outputs": [],
@@ -336,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "id": "agricultural-royalty",
    "metadata": {},
    "outputs": [
@@ -522,7 +522,7 @@
        "4              NaN  "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -535,7 +535,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 15,
    "id": "micro-acceptance",
    "metadata": {},
    "outputs": [],
@@ -545,7 +545,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 16,
    "id": "conscious-washer",
    "metadata": {},
    "outputs": [
@@ -684,7 +684,7 @@
        "5                  NaN  "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -696,7 +696,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 17,
    "id": "dense-studio",
    "metadata": {},
    "outputs": [],
@@ -706,7 +706,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 18,
    "id": "former-domestic",
    "metadata": {},
    "outputs": [
@@ -716,7 +716,7 @@
        "<module 'myscripts.preprocess_data' from '..\\\\myscripts\\\\preprocess_data.py'>"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -727,7 +727,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 19,
    "id": "attached-pregnancy",
    "metadata": {},
    "outputs": [],
@@ -738,7 +738,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 20,
    "id": "pediatric-processing",
    "metadata": {},
    "outputs": [
@@ -765,7 +765,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -776,7 +776,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 21,
    "id": "concerned-horror",
    "metadata": {},
    "outputs": [],
@@ -786,7 +786,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 22,
    "id": "acknowledged-consortium",
    "metadata": {},
    "outputs": [],
@@ -797,7 +797,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 23,
    "id": "recorded-japan",
    "metadata": {},
    "outputs": [],
@@ -807,7 +807,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 24,
    "id": "convertible-integer",
    "metadata": {},
    "outputs": [
@@ -835,7 +835,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -846,7 +846,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 25,
    "id": "fancy-transsexual",
    "metadata": {},
    "outputs": [
@@ -873,7 +873,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -884,7 +884,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 26,
    "id": "cultural-conducting",
    "metadata": {},
    "outputs": [
@@ -1222,7 +1222,7 @@
        "[508031 rows x 18 columns]"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1237,7 +1237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 27,
    "id": "congressional-trial",
    "metadata": {},
    "outputs": [],
@@ -1248,7 +1248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 28,
    "id": "humanitarian-victorian",
    "metadata": {},
    "outputs": [],
@@ -1259,7 +1259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 29,
    "id": "protecting-premiere",
    "metadata": {},
    "outputs": [
@@ -1398,7 +1398,7 @@
        "22      Jan,Apr,Jul,Oct  "
       ]
      },
-     "execution_count": 26,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1417,7 +1417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 30,
    "id": "actual-rally",
    "metadata": {},
    "outputs": [],
@@ -1430,7 +1430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 31,
    "id": "consecutive-exclusive",
    "metadata": {},
    "outputs": [],
@@ -1440,7 +1440,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 32,
    "id": "specified-newfoundland",
    "metadata": {},
    "outputs": [],
@@ -1452,7 +1452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 33,
    "id": "bright-report",
    "metadata": {},
    "outputs": [],
@@ -1462,7 +1462,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 34,
    "id": "elegant-attendance",
    "metadata": {},
    "outputs": [],
@@ -1473,7 +1473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 35,
    "id": "criminal-kenya",
    "metadata": {},
    "outputs": [
@@ -1483,7 +1483,7 @@
        "['StateHoliday', 'StoreType', 'Assortment', 'PromoInterval']"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1494,7 +1494,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 36,
    "id": "connected-attitude",
    "metadata": {},
    "outputs": [],
@@ -1504,7 +1504,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 37,
    "id": "stupid-astronomy",
    "metadata": {},
    "outputs": [],
@@ -1515,7 +1515,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 38,
    "id": "viral-trigger",
    "metadata": {},
    "outputs": [],
@@ -1525,7 +1525,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 39,
    "id": "standing-breakdown",
    "metadata": {},
    "outputs": [],
@@ -1535,7 +1535,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 40,
    "id": "romance-psychology",
    "metadata": {},
    "outputs": [],
@@ -1546,7 +1546,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 41,
    "id": "appointed-lafayette",
    "metadata": {},
    "outputs": [],
@@ -1556,7 +1556,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 42,
    "id": "governing-prairie",
    "metadata": {},
    "outputs": [],
@@ -1566,7 +1566,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 43,
    "id": "convenient-optics",
    "metadata": {},
    "outputs": [],
@@ -1581,7 +1581,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 44,
    "id": "social-cooking",
    "metadata": {},
    "outputs": [],
@@ -1593,7 +1593,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 45,
    "id": "talented-malta",
    "metadata": {},
    "outputs": [
@@ -1627,7 +1627,7 @@
        " 'dayType']"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1639,7 +1639,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 46,
    "id": "committed-dollar",
    "metadata": {},
    "outputs": [],
@@ -1649,7 +1649,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 47,
    "id": "cleared-growing",
    "metadata": {},
    "outputs": [],
@@ -1659,7 +1659,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 48,
    "id": "similar-nation",
    "metadata": {},
    "outputs": [],
@@ -1669,7 +1669,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 49,
    "id": "compressed-capacity",
    "metadata": {},
    "outputs": [],
@@ -1679,23 +1679,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 50,
    "id": "existing-laptop",
    "metadata": {},
    "outputs": [],
    "source": [
-    "train=cleaner_train.scale_data(train)\n",
-    "test=cleaner_test.scale_data(test)"
+    "# train=cleaner_train.scale_data(train)\n",
+    "# test=cleaner_test.scale_data(test)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 51,
    "id": "twenty-punch",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Save clean and fixed train and test dataframes"
+    "#Save clean and fixed train and test dataframes\n",
+    "test.to_csv('C:/Users/Faith Bagire/Desktop/test_unscaled.csv')"
    ]
   }
  ],
