mlflow log scaler

--- a/notebook/modelling.ipynb
+++ b/notebook/modelling.ipynb
@@ -65,21 +65,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "exceptional-circus",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "((1017209, 19), (41088, 17))"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# git_rev\n",
     "vf = '70a72e7e4cda6da4ab57bb8571e5cc2f3c5366e0'\n",
@@ -93,23 +82,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "korean-technician",
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<module 'myscripts.preprocess_data' from '..\\\\myscripts\\\\preprocess_data.py'>"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "importlib.reload(modelprep)\n",
     "importlib.reload(preprocess_data)"
@@ -117,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "native-apple",
    "metadata": {},
    "outputs": [],
@@ -127,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "synthetic-defensive",
    "metadata": {},
    "outputs": [],
@@ -137,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "intensive-stream",
    "metadata": {},
    "outputs": [],
@@ -152,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "confidential-occurrence",
    "metadata": {},
    "outputs": [],
@@ -169,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "comfortable-trailer",
    "metadata": {},
    "outputs": [],
@@ -179,20 +157,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "fleet-archive",
+   "execution_count": null,
+   "id": "guilty-segment",
    "metadata": {},
    "outputs": [],
    "source": [
     "mlflow.set_experiment('sales_predict')\n",
-    "mlflow.sklearn.autolog()\n",
-    "\n",
+    "mlflow.sklearn.autolog()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "timely-communication",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rf_model = pipeline.fit(X_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fleet-archive",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "with mlflow.start_run() as run:\n",
-    "\n",
-    "    rf_model = pipeline.fit(X_train, y_train)\n",
     "    y_pred = rf_model.predict(X_val)\n",
     "    mse, rmse, r2 = model_prep.error_calculate(y_val, y_pred)\n",
     "    mlflow.log_metrics({val + \"mse\": mse, val + 'rmse': rmse, val + 'r2': r2},step=1)\n",
+    "    joblib.dump(pipeline['scaler'],'scaler.pkl')\n",
+    "    mlflow.log_artifact('scaler.pkl')\n",
     "    mlflow.sklearn.log_model(rf_model, \"Regressor model\")"
    ]
   },
@@ -208,31 +204,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "homeless-spectacular",
+   "execution_count": null,
+   "id": "elementary-ceremony",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'training_mae': 0.07322224162420078,\n",
-       " 'training_mse': 0.011245477329646683,\n",
-       " 'training_r2_score': 0.8292504689253077,\n",
-       " 'training_rmse': 0.1060446949622973,\n",
-       " 'training_score': 0.8292504689253077,\n",
-       " 'validation_mse': 0.012565565767504344,\n",
-       " 'validation_r2': 0.8068687056339894,\n",
-       " 'validation_rmse': 0.1120962344037673}"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "metrics"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
