scaler logging done

--- a/notebook/modelling.ipynb
+++ b/notebook/modelling.ipynb
@@ -65,10 +65,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "exceptional-circus",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "((1017209, 19), (41088, 17))"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# git_rev\n",
     "vf = '70a72e7e4cda6da4ab57bb8571e5cc2f3c5366e0'\n",
@@ -82,12 +93,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "korean-technician",
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<module 'myscripts.preprocess_data' from '..\\\\myscripts\\\\preprocess_data.py'>"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "importlib.reload(modelprep)\n",
     "importlib.reload(preprocess_data)"
@@ -95,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "native-apple",
    "metadata": {},
    "outputs": [],
@@ -105,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "synthetic-defensive",
    "metadata": {},
    "outputs": [],
@@ -115,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "intensive-stream",
    "metadata": {},
    "outputs": [],
@@ -130,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "confidential-occurrence",
    "metadata": {},
    "outputs": [],
@@ -147,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "comfortable-trailer",
    "metadata": {},
    "outputs": [],
@@ -157,8 +179,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "guilty-segment",
+   "execution_count": 11,
+   "id": "greatest-haiti",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -168,17 +190,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "timely-communication",
+   "execution_count": 12,
+   "id": "imperial-lounge",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2022/08/10 17:15:26 INFO mlflow.utils.autologging_utils: Created MLflow autologging run with ID '711a2aff47f54e278b2dac45e1fc3edf', which will track hyperparameters, performance metrics, model artifacts, and lineage information for the current sklearn workflow\n"
+     ]
+    }
+   ],
    "source": [
     "rf_model = pipeline.fit(X_train, y_train)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "fleet-archive",
    "metadata": {},
    "outputs": [],
@@ -201,14 +231,6 @@
    "source": [
     "params, metrics, tags, artifacts = fetch_logged_data(run.info.run_id)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "elementary-ceremony",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
