--- a/notebook/modelling.ipynb
+++ b/notebook/modelling.ipynb
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "exceptional-circus",
    "metadata": {},
    "outputs": [
@@ -75,7 +75,7 @@
        "((1017209, 19), (41088, 17))"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "korean-technician",
    "metadata": {
     "scrolled": true
@@ -105,7 +105,7 @@
        "<module 'myscripts.preprocess_data' from '..\\\\myscripts\\\\preprocess_data.py'>"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "native-apple",
    "metadata": {},
    "outputs": [],
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "synthetic-defensive",
    "metadata": {},
    "outputs": [],
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "intensive-stream",
    "metadata": {},
    "outputs": [],
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "confidential-occurrence",
    "metadata": {},
    "outputs": [],
@@ -169,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "comfortable-trailer",
    "metadata": {},
    "outputs": [],
@@ -179,41 +179,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "greatest-haiti",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "mlflow.set_experiment('sales_predict')\n",
-    "mlflow.sklearn.autolog()"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 12,
-   "id": "imperial-lounge",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2022/08/10 17:15:26 INFO mlflow.utils.autologging_utils: Created MLflow autologging run with ID '711a2aff47f54e278b2dac45e1fc3edf', which will track hyperparameters, performance metrics, model artifacts, and lineage information for the current sklearn workflow\n"
-     ]
-    }
-   ],
-   "source": [
-    "rf_model = pipeline.fit(X_train, y_train)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
    "id": "fleet-archive",
    "metadata": {},
    "outputs": [],
    "source": [
+    "mlflow.set_experiment('sales_predict')\n",
+    "mlflow.sklearn.autolog()\n",
     "with mlflow.start_run() as run:\n",
+    "    rf_model = pipeline.fit(X_train, y_train)\n",
     "    y_pred = rf_model.predict(X_val)\n",
     "    mse, rmse, r2 = model_prep.error_calculate(y_val, y_pred)\n",
     "    mlflow.log_metrics({val + \"mse\": mse, val + 'rmse': rmse, val + 'r2': r2},step=1)\n",
@@ -224,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "id": "false-vessel",
    "metadata": {},
    "outputs": [],
@@ -234,17 +208,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "alternative-packet",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['../models/10-08-2022-13-53-45.pkl']"
+       "['../models/10-08-2022-18-24-30.pkl']"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -255,6 +229,51 @@
     "mdl_tmp = '../models/' + str(\n",
     "    datetime.now().strftime(\"%d-%m-%Y-%H-%M-%S\")) + '.pkl'\n",
     "joblib.dump(rf_model, mdl_tmp)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "bacterial-airfare",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sc=pipeline['scaler']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "great-requirement",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.23809734, 0.2103224 , 0.48359318, ..., 0.47876622, 0.        ,\n",
+       "        0.28499523],\n",
+       "       [0.23809734, 0.33265893, 0.45113053, ..., 0.55427254, 0.        ,\n",
+       "        0.28499523],\n",
+       "       [0.23809734, 0.32527953, 0.48359318, ..., 0.55427254, 0.        ,\n",
+       "        0.28499523],\n",
+       "       ...,\n",
+       "       [0.36693477, 0.31317271, 0.38620523, ..., 0.47876622, 0.        ,\n",
+       "        0.28499523],\n",
+       "       [0.36693477, 0.21643346, 0.38620523, ..., 0.47876622, 0.        ,\n",
+       "        0.28499523],\n",
+       "       [0.36693477, 0.26808922, 0.38620523, ..., 0.55427254, 0.        ,\n",
+       "        0.28499523]])"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sc.inverse_transform(X_val)"
    ]
   },
   {
